--- a/index.html
+++ b/index.html
@@ -11,11 +11,17 @@
         <input type="text"/ v-model="inputValue">
         <button v-on:click="handleBtnClick">提交</button>
         <ul>
-            <li v-for = "item in list">{{item}}</li>
+            <todo-item v-bind:content="item"
+                v-for="item in list"
+            ></todo-item>
         </ul>
     </div>
 <script src="./vue.js"></script>
 <script>
+    Vue.component("TodoItem",{
+        props:['content'],
+        template:`<li>{{content}}</li>`
+    })
     var app = new Vue({
         el:'#app',
         data:{
